@@ -1,6 +1,9 @@
 Changes from jTDS 1.3.0
 =======================
 
+04/02/2013 - Holger Rehn
+ o Fixed bug #699, conversion from timestamp String to Date fails.
+
 03/18/2013 - Holger Rehn
  o Backported Kerberos support from jTDS 2.0.
 
